# jack-midi-tools

./: Cargo.toml  README.md
demo-test/: Cargo.toml
demo-test/src/: composite.rs  compute.glsl  compute.rs  compute.wgsl  context.rs  main.rs  shader.wgsl  textures.rs
demo-test/src/composite/: composite.frag.glsl  composite.vert.glsl  composite.wgsl  mod.rs
egui-widgets-music/: Cargo.toml
egui-widgets-music/src/: channel_selector.rs  lib.rs  piano_keys.rs
jack-midi-logger/: Cargo.toml
jack-midi-logger/src/: gui.rs  main.rs  midi_logger.rs  model.rs
jack-midi-transpose/: Cargo.toml
jack-midi-transpose/src/: gui.rs
jack-midi-transposer/: Cargo.toml
jack-midi-transposer/src/: main.rs  midi_transpose.rs  model.rs
jack-module/: Cargo.toml
jack-module/src/: lib.rs  module.rs  port_descriptor.rs  runner.rs
midi-device/: Cargo.toml
midi-device/src/: device.rs  note.rs
midi-events/: Cargo.toml
midi-events/src/: decode.rs  decode_jack.rs  encode.rs  event.rs  jack.rs  lib.rs  message.rs
midi-events/src/state/: channel.rs  device.rs  mod.rs  note.rs
music-notes/: Cargo.toml
music-notes/src/: chords.rs  lib.rs  note.rs  notes.rs  octave.rs
music-notes/src/chromatic/: chords.rs  notes.rs  scale.rs  tones.rs
src/: main.rs
