[package]
name = "jack-midi-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midi-events = {path="../midi-events"}
midi-device = {path="../midi-device"}
jack-module = {path="../jack-module"}

jack = "*"
egui = "*"
eframe = "*"
lazy_static = "*"
