[package]
name = "jack-midi-transpose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midi-events = {path="../midi-events"}
jack-module = {path="../jack-module"}

jack = "0.11.3"
egui = "0.20.1"
eframe = "0.20.1"
lazy_static = "1.4.0"
